tests/instantiating/clear_invalid_type/stderr.golden
error: clear property must be of type string, current type bit string
bus.fbd +3:11
   |
 3 | 		clear = b"1010"
   | 		        ^^^^^^^
